--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@heroui/react": "^2.8.2",
-    "@heroui/theme": "^2.4.20",
+    "@lottiefiles/dotlottie-react": "^0.15.0",
+    "@mantine/core": "^8.2.5",
+    "@mantine/hooks": "^8.2.5",
     "framer-motion": "^12.23.12",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
