bug fix 1 vite.config.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sporkify-1",
-  "homepage": "https://yuntelee.github.io/sporkify-1",
+  "homepage": "https://yuntelee.github.io/sporkify-1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
