--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/core": "^8.2.5",
     "@mantine/hooks": "^8.2.5",
     "framer-motion": "^12.23.12",
+    "gh-pages": "^6.3.0",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
